--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
-    implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
+    implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+    implementation 'org.mockito:mockito-core:2.8.47'
     kapt "com.squareup.moshi:moshi-kotlin-codegen:1.8.0"
     implementation "androidx.room:room-runtime:2.1.0-alpha03"
     kapt "androidx.room:room-compiler:2.1.0-alpha03"
     testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:rules:1.1.1'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
